--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Node build script to automatically zip mods",
   "main": "build.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Congratulations, there are no requirements!\" && exit 0"
   },
   "repository": {
     "type": "git",
